<resources>
    <string name="app_name">ByHeart</string>
    <string name="action_settings">Hide buttons</string>
    <string name="action_information">Information</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_lib">Library</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_activity_new_author">New author</string>
    <string name="title_activity_new_poem">New text</string>
    <string name="hint_input_author_name">Input author name</string>
    <string name="hint_input_title">Input title</string>
    <string name="title_activity_study_poem">StudyPoem</string>
    <string name="author_exist">Author already Exists, please change name or remove old Author</string>
    <string name="counter">selected</string>
    <string name="action_delete">selected_delete</string>
    <string name="action_favorites">selected_favorites</string>
    <string name="action_select">selected_selection</string>
    <string name="executing_task">text formating</string>
    <string name="hide_text">Hide text</string>
    <string name="show_text">Show Text</string>
    <string name="clear_text">Clear text hide</string>
    <string name="toast_input_title_or_text">Please fill title and text</string>
    <string name="save_text">Save</string>
    <string name="paste_text">Paste</string>
    <string name="add_save_new_text">menu</string>
    <string name="hint_input_text">Please paste text here with button in right bottom corner, or write text manual</string>
    <string name="hint_add_author_photo">Click to add folder image</string>
    <string name="permissions">Permissions</string>
    <string name="grant">Grant</string>
    <string name="denied">Denied</string>
    <string name="thanks">Thank you</string>
    <string name="permissions_need">You can grant permissions in you app settings later. Thank you.</string>
    <string name="permissions_message">This permissions needed for loading images to your own folder in our app, do you want grant permissions?</string>
    <string name="about_developer">This app was developed by Vladislav Kipnis to contact with him you can use this email:</string>
    <string name="about_designer">The main theme and all icons of this app was designed by Larisa Shmanko to contact with her you can use this email:</string>
    <string name="mail_developer"><a href="mailto:wgjuher.development@gmail.com">wgjuher.development@gmail.com</a></string>
    <string name="mail_designer"><a href="mailto:mellnica2@gmail.com">mellnica2@gmail.com</a></string>
    <string name="for_load_photo_permission"><![CDATA[For load photo you need grant permission to app. Go to your phone settings->apps->ByHeart->Permissons]]></string>
    <string name="have_no_any_mail_apps">You have no any apps to send mail. Mail address copy to clipboard. </string>
    <string name="action_options">Edit</string>
    <string name="hint_change_photo">To change photo, please click image</string>
    <string-array name="poet_options">
        <item> Redact </item>
    </string-array>
</resources>
