<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wgjuh.byheart.AboutActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_about_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_developer"
        android:textSize="22sp"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/mail_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail_developer"
        android:clickable="true"
        android:onClick="openMailDeveloper"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/text_about_designer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_designer"
        android:textSize="22sp"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/mail_designer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail_designer"
        android:clickable="true"
        android:onClick="openMailDesigner"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        />
</LinearLayout>
