<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.wgjuh.byheart.StudyPoem">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_study"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:gravity="center">
        <com.wgjuh.byheart.CustomTextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:maxLines="1"
            android:singleLine="true"
            android:gravity="center_vertical|start"
            android:textSize="20sp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <include
        layout="@layout/content_study_poem" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_white_48dp"
        android:layout_marginTop="62dp"
        android:layout_marginRight="5dp"
        fab:menu_openDirection="down"
        fab:menu_fab_show_animation="@anim/fab_slide_in_from_right"
        fab:menu_fab_hide_animation="@anim/fab_slide_out_to_right"
        app:menu_colorNormal="@color/colorPrimaryDark"
        app:menu_colorPressed="@color/colorPrimary"
        app:elevation="6dp"
        app:borderWidth="0dp"
        fab:menu_fab_size="mini"
        app:layout_anchor="@id/appbar_study"
        app:layout_anchorGravity="bottom|end"
        >
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="normal"
            app:fab_colorNormal="@color/colorPrimaryDark"
            app:fab_colorPressed="@color/colorPrimaryDark"
            app:fab_label="@string/clear_text"
            android:src="@drawable/clear_all"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/show_text"

            fab:fab_size="normal"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorPrimary"
            android:src="@drawable/eraser"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_hide"
            app:fab_label="@string/hide_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="normal"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorPrimary"
            android:src="@drawable/pencil"/>

    </com.github.clans.fab.FloatingActionMenu>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
